cli/v0.0.7/init.mdx
---
title: 'init'
description: "Create your Alto project with `alto init`"
version: 'v0.0.7'
---

## Usage
  `alto init` constructs a configuration YAML based on your CLI arguments:

  ```html
  Usage: alto init [OPTIONS]                                                                                                                 
                                                                                                                                            
  Create a configuration YAML                                                                                                                
  Examples:                                                                                                                                  
                                                                                                                                              
    • alto init --type ec2 --entrypoint script                                                                                                
    • alto init --type ec2 --file ec2.yml                                                                                                     
                                                                                                                                              
  ╭- Options --------------------------------------------------------------------------------------------------------------------------------╮
  | --type            [docker|ec2|docker-on-ec2]         Type of cloud environment to use                                                    |
  | --file        -f  TEXT                               Name of new Alto configuration file. [default: alto.yml]                            |
  | --entrypoint  -f  [script|function|project|jupyter]  Entrypoint type. [default: script]                                                  |
  | --verbose     -v                                     Log all activity after command execution according to --log-level. [default: False] |
  | --log-level   -l  [info|warn|error|debug]            Set the log level. [default: info]                                                  |
  | --help                                               Show this message and exit.                                                         |
  ╰------------------------------------------------------------------------------------------------------------------------------------------╯
  ```

## Example
  Here's what the output looks like:

  ```
  $ alto init --verbose

  What type of cloud environment do you want to use [ec2]? ec2
  What would you like the name of your configuration file to be (default: nomad.yml)?

  <HH:MM:SS> | INFO | Building configuration file...
  <HH:MM:SS> | INFO | Done!
  ```
